feat: added field validation
