# BACK/src/controllers/router.ts
@@ -1,12 +1,12 @@
 import express from 'express';
 
-import { LoginInvalido, ErrorResponse, CardNaoEncontrado } from '../model';
+import { LoginRequest, CardRequest } from '../model';
 import { LoginController, CardsController } from '../controllers'
-import {authenticate} from '../services'
+import { authenticate, validateInput } from '../services'
 
 export const router = express.Router();
 
-router.post('/login', async (req, res, next) => {
+router.post('/login', validateInput(LoginRequest), async (req, res, next) => {
     try {
         const controller = new LoginController();
         const response = await controller.login(req.body);
@@ -26,8 +26,7 @@ router.get('/cards', authenticate, async (_req, res, next) => {
     }
 })
 
-//TODO: Validação dos campos de entrada
-router.post('/cards', authenticate, async (req, res, next) => {
+router.post('/cards', validateInput(CardRequest), authenticate, async (req, res, next) => {
     const controller = new CardsController();
     try {
         const response = await controller.createNewCard(req.body);
@@ -37,13 +36,12 @@ router.post('/cards', authenticate, async (req, res, next) => {
     }
 })
 
-router.put('/cards/:cardId', authenticate, async (req, res, next) => {
+router.put('/cards/:cardId', validateInput(CardRequest), authenticate, async (req, res, next) => {
     const controller = new CardsController();
     try {
         const response = await controller.updateCard(req.params.cardId, req.body)
         return res.json(response)
     } catch (err) {
-        console.log(err)
         next(err)
     }
 })
