# BACK/src/model/cardRequest.ts
@@ -1,7 +1,17 @@
-export type CardRequest = {
-    titulo: string,
-    conteudo: string,
-    lista: string
+import { IsString, IsNotEmpty } from "class-validator";
+
+export class CardRequest {
+    @IsString()
+    @IsNotEmpty()
+    titulo!: string;
+
+    @IsString()
+    @IsNotEmpty()
+    conteudo!: string;
+
+    @IsString()
+    @IsNotEmpty()
+    lista!: string;
 }
 
 export default CardRequest;
