# BACK/src/model/exceptions/validationException.ts
@@ -1,0 +1,15 @@
+import { Field } from "..";
+
+export class ValidationException extends Error {
+    message: string;
+    fields: Field[];
+    constructor(msg: string, fields: Field[]) {
+        super(msg);
+        this.message = msg;
+        this.fields = fields;
+
+        Object.setPrototypeOf(this, ValidationException.prototype);
+    }
+}
+
+export default ValidationException
